# amplify-object-store

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  async_client.py  async_test.py  auth_fastapi.py  auth_tokens.py  client.py  docker-compose.yml  dotenv.template  pyproject.toml  requirements.txt  storage.yaml.template  test.py
src/objectstore/: app.py  async_client.py  auth_fastapi.py
src/objectstore/auth/: fastapi.py  tokens.py
tests/: async_test.py  test.py
