[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplify-object-store"
version = "0.1.0"
description = "Object storage REST API"
readme = "README.md"
authors = [{name = "Joe Futrelle", email = "jfutrelle@whoi.edu"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['storage']
dependencies = [
    "fastapi>=0.124.2",
    "requests>=2.32.5",
    "amplify-storage-utils @ git+https://github.com/WHOIGit/amplify-storage-utils@v1.4.1"
]
[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
]
deploy = [
  "uvicorn>=0.38.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/objectstore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.urls]
Repository = "https://github.com/WHOIGit/amplify-object-store"
